# GameOfColors

./: .gitignore  GameOfColors.sln  README.md
Criacao TILEMAP/: tilemap.tmx  tileset.tsx
GameOfColors/: CMakeLists.txt  GameOfColors.APS  GameOfColors.filters  GameOfColors.rc  GameOfColors.vcxproj  GameOfColors.vcxproj.filters
GameOfColors/header/: ColorTile.h  GameObject.h  Includes.h  Layer.h  Shader.h  SpriteSheet.h  Texture.h  Tilemap.h  Transformations.h  VerticesObject.h  stb_image.h
GameOfColors/shader/: fragmentShader.txt  vertexShader.txt
GameOfColors/source/: main.cpp
